--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,9 @@ jobs:
           "https://github.com/getzola/zola/releases/download/v0.11.0/zola-v0.11.0-x86_64-unknown-linux-gnu.tar.gz" 
           | sudo tar xzf - -C /usr/local/bin
       - name: Checking out
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
+        with: 
+          submodules: 'true'
       - name: Build
         run: zola build --output-dir docs
       - name: Configure git
