--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Configure git
         run: git config --global user.email "github-actions-bot@users.noreply.github.com" && git config --global user.name  "GitHub Actions"
       - name: Commit Changes
-        run: git add . && git commit -m "Publishing changes"
+        run: git add . && git commit -m "Publishing changes" 2>&1 >/dev/null
       - name: Publish
         run:  git push "https://github.com/picklenerd/blog"
