--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,14 +14,15 @@ jobs:
           wget -q -O - 
           "https://github.com/getzola/zola/releases/download/v0.11.0/zola-v0.11.0-x86_64-unknown-linux-gnu.tar.gz" 
           | sudo tar xzf - -C /usr/local/bin
+      - name: Configure git
+        run: git config --global user.email "github-actions-bot@users.noreply.github.com" && git config --global user.name  "GitHub Actions"
       - name: Checking out
         uses: actions/checkout@v2
       - name: Build
-        run: zola build --output-dir docs
-      - name: Configure git
-        run: git config --global user.email "github-actions-bot@users.noreply.github.com" && git config --global user.name  "GitHub Actions"
-      - name: Commit Changes
-        continue-on-error: true
-        run: git add . && git commit -m "Publishing changes"
-      - name: Publish
-        run:  git push "https://github.com/picklenerd/blog"
+        run: zola build
+      - name: Changing to gh-pages branch
+        run: git fetch && git checkout gh-pages
+      - name: Move files
+        run:  cp -r public/* ./ && rm -rf public
+      - name: Push gh-pages branch
+      - run: git add . && git commit -m "Publishing" && git push
