--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,4 +25,5 @@ jobs:
       - name: Move files
         run:  cp -r public/* ./ && rm -rf public
       - name: Push gh-pages branch
+        continue-on-error: true
         run: git add . && git commit -m "Publishing" && git push
